--- a/docs/appendices/release-notes/1.0.2.rst
+++ b/docs/appendices/release-notes/1.0.2.rst
@@ -70,7 +70,8 @@ Fixes
 
  - Fixed an issue that causes ``UnhandledServerException`` on joins when
    ``WHERE`` clause contains conditions on columns of array type of both tables
-   which are separated with the ``OR`` operator. e.g.::
+   which are separated with the ``OR`` :ref:`operator <glossary-operator>`.
+   e.g.::
 
        SELECT * FROM t1 join t2 ON t1.id = t2.id
        WHERE 'foo' = ANY(a.strArray) OR 'bar' = ANY(b.strArray)
