--- a/docs/appendices/release-notes/2.1.9.rst
+++ b/docs/appendices/release-notes/2.1.9.rst
@@ -47,7 +47,8 @@ Fixes
 - Fixed an issue that prevented the complete graceful shutdown of CrateDB node.
 
 - Fixed an issue that caused a ``NullPointerException`` for queries that use
-  the ``IN`` or ``ANY`` operator on timestamp fields.
+  the ``IN`` or ``ANY`` :ref:`operators <glossary-operator>` on timestamp
+  fields.
 
 - Improves resiliency of ``COPY FROM`` and ``INSERT FROM SUBQUERY`` statements
   when lot of new partitions will be created on demand.
