--- a/docs/appendices/release-notes/4.3.2.rst
+++ b/docs/appendices/release-notes/4.3.2.rst
@@ -56,9 +56,9 @@ Fixes
   validation was by passed and resulted in an execution exception instead of
   an user friendly validation exception.
 
-- Fixed an issue that caused ``IS NULL`` and ``IS NOT NULL`` operators on
-  columns of type ``OBJECT`` with the column policy ``IGNORED`` to match
-  incorrect records.
+- Fixed an issue that caused ``IS NULL`` and ``IS NOT NULL`` :ref:`operators
+  <glossary-operator>` on columns of type ``OBJECT`` with the column policy
+  ``IGNORED`` to match incorrect records.
 
 - Fixed an issue that led to an error like ``UnsupportedOperationException:
   Can't handle Symbol [ParameterSymbol: $1]`` if using ``INSERT INTO`` with a
