--- a/docs/appendices/release-notes/4.2.2.rst
+++ b/docs/appendices/release-notes/4.2.2.rst
@@ -40,7 +40,7 @@ Fixes
   bound exception.
 
 - Fixed a regression that caused ``INSERT INTO`` statements in tables with a
-  nested ``CLUSTERED BY`` column to fail.
+  nested :ref:`CLUSTERED BY column <glossary-clustered-by-column>` to fail.
 
 - Fixed a regression introduced in 4.2.0 that caused subscript lookups on
   ignored object columns to raise an error instead of a null value if the key
