Add the "partition column" definition and related changes
This change started out as a regular glossary addition. However, while
cross-cross referencing the docs to the definition entry, I noticed that there
were some major areas for improvement.

Changes included:

- Addition of the "partition column" definition.

  There were three different terms being used for this: partition column,
  partitioned column, and PARTITION BY column. "Partitioned column" is
  misleading because it is the table that is partitioned, not the column itself
  per se. "PARTITIONED BY column" is accurate, but clunky. I settled on
  "partition column" because it is accurate and doesn't necessitate the use of
  SQL literals.

  I added entries for "partitioned column" and "PARTITIONED BY column" which
  point to the preferred term.

- Added a few more PLACEHOLDER terms to the glossary. These terms came up as
  candidates for inclusion while I was working on the rest of these changes.

- Overhauled the use of RST labels for some files.

  Initially, I had to add or adjust some RST labels so that I could link
  everything together properly for the work I was doing.

  However, in accordance with our core principals
  (https://github.com/crate/crate-docs/blob/main/style/general.rst), I decided,
  while I was at it, to put in the extra effort to improve the quality and
  consistency of RST label use in the files I touched.

  This relates to the glossary work because cross-referencing (using RST
  labels) makes up the bulk of the changes (by line count).

  Unfortunately, updating label references elsewhere in the docs to match
  generated a more noise than I was expecting. If this makes reviewing
  difficult, I am happy to decompose this changeset into smaller, separate
  commits.

- Minor copyedits for clarity, typo fixes, RST formatting fixes (per
  https://github.com/crate/crate-docs/blob/main/style/rst.rst), and structural
  reworking where I spotted an easy opportunity.

  This includes so

--- a/docs/appendices/release-notes/1.0.4.rst
+++ b/docs/appendices/release-notes/1.0.4.rst
@@ -36,8 +36,8 @@ Changelog
 Changes
 -------
 
- - Removed limitation which didn't allow ordering on partitioned columns in a
-   ``GROUP BY`` query.
+ - Removed limitation which didn't allow ordering on :ref:`partition columns
+   <glossary-partition-column>` in a ``GROUP BY`` query.
 
  - Updated crate-admin to 1.0.5 which includes the following change:
 
