--- a/docs/appendices/release-notes/2.1.9.rst
+++ b/docs/appendices/release-notes/2.1.9.rst
@@ -64,7 +64,7 @@ Fixes
 
 - Fixed an issue that caused an error ``Primary key value must not be NULL``
   to be thrown when trying to insert rows in a table that has a generated
-  column which is used both in ``PARTITION_BY`` and ``PRIMARY KEY``.
+  column which is used both in ``PARTITION BY`` and ``PRIMARY KEY``.
 
 - The PostgreSQL wire protocol service can now be bound to IPv6 addresses as
   documented.
