--- a/docs/appendices/release-notes/2.2.2.rst
+++ b/docs/appendices/release-notes/2.2.2.rst
@@ -74,4 +74,4 @@ Fixes
 
 - Fixed an issue that caused an error ``Primary key value must not be NULL``
   to be thrown when trying to insert rows in a table that has a generated
-  column which is used both in ``PARTITION_BY`` and ``PRIMARY KEY``.
+  column which is used both in ``PARTITION BY`` and ``PRIMARY KEY``.
