--- a/docs/appendices/release-notes/4.0.10.rst
+++ b/docs/appendices/release-notes/4.0.10.rst
@@ -53,11 +53,11 @@ Fixes
 
 - Fixed an issue that would lead to incorrect behaviour of the insert from
   sub query statement for the scenario when the target table contains a
-  :ref:`generated column <sql-ddl-generated-columns>` with the
-  :ref:`not_null_constraint` constraint and a value for the
-  :ref:`generated column <sql-ddl-generated-columns>` is not provided
-  explicitly. For example, the insert statement below failed due to the
-  :ref:`not_null_constraint` constraint violation::
+  :ref:`generated column <ddl-generated-columns>` with the
+  :ref:`not_null_constraint` constraint and a value for the :ref:`generated
+  column <ddl-generated-columns>` is not provided explicitly. For example, the
+  insert statement below failed due to the :ref:`not_null_constraint`
+  constraint violation::
 
      CREATE TABLE t (x INT, y AS x + 1 NOT NULL)
      INSERT INTO t (x) (SELECT 1)
