--- a/docs/appendices/release-notes/4.2.2.rst
+++ b/docs/appendices/release-notes/4.2.2.rst
@@ -57,8 +57,8 @@ Fixes
   virtual table, and both a ``ORDER BY`` and ``LIMIT`` clause to fail.
 
 - Fixed a regression introduced in 4.2.0 that resulted in ``NULL`` values being
-  returned for columns used in the ``PARTITIONED BY`` clause instead of the
-  actual values.
+  returned for :ref:`partition columns <glossary-partition-column>` instead of
+  the actual values.
 
 - Allow all users to execute ``DISCARD`` and ``SET TRANSACTION`` statement.
   These are session local statements and shouldn't require special privileges.
