--- a/docs/appendices/release-notes/3.3.0.rst
+++ b/docs/appendices/release-notes/3.3.0.rst
@@ -103,8 +103,7 @@ SQL Improvements
 
 - Added support for the ``row_number()`` window function.
 
-- Added support for using any expression in the :ref:`operand
-  <glossary-operand>` of a ``CASE`` clause.
+- Added support for using any expression in the operand of a ``CASE`` clause.
 
 - Fix quoting of identifiers that contain leading digits or spaces when
   printing relation or column names.
