--- a/docs/appendices/release-notes/1.1.0.rst
+++ b/docs/appendices/release-notes/1.1.0.rst
@@ -90,7 +90,7 @@ Changes
  - Added support for filtering and ordering on ``ignored`` object columns.
 
  - Added support for the double colon (``::``) cast :ref:`operator
-   <glossary-operator>`.
+   <gloss-operator>`.
 
  - Upgraded the parser from ANTLR3 to ANTLR4.
 
