--- a/docs/appendices/release-notes/2.3.6.rst
+++ b/docs/appendices/release-notes/2.3.6.rst
@@ -46,7 +46,7 @@ Fixes
 - Fixed an issue that caused an error to be thrown when filtering on a
   partitioned table using a column which is a source column for a ``GENERATED``
   column which in turn is used as :ref:`partition column
-  <glossary-partition-column>`. E.g.::
+  <gloss-partition-column>`. E.g.::
 
     CREATE TABLE parted_t(
         t TIMESTAMP,
