--- a/docs/appendices/release-notes/3.1.0.rst
+++ b/docs/appendices/release-notes/3.1.0.rst
@@ -93,7 +93,7 @@ Changes
 - Added a new scalar function ``ignore3vl`` which eliminates the 3-valued logic
   of null handling for every logical expression beneath it. If 3-valued logic
   is not required, the use of this function in the ``WHERE`` clause beneath a
-  ``NOT`` :ref:`operator <glossary-operator>` can boost the query performance
+  ``NOT`` :ref:`operator <gloss-operator>` can boost the query performance
   significantly. E.g.::
 
     SELECT * FROM t
