--- a/docs/appendices/release-notes/3.3.3.rst
+++ b/docs/appendices/release-notes/3.3.3.rst
@@ -61,8 +61,8 @@ Fixes
   ``information_schema.views``.
 
 - Increased the precedence of the double colon cast :ref:`operator
-  <glossary-operator>`, so that a statement like ``x::double / y::double``
-  applies both casts before the division.
+  <gloss-operator>`, so that a statement like ``x::double / y::double`` applies
+  both casts before the division.
 
 - Fixed an issue with the disk watermark sys checks which would incorrectly
   report all of them as failed if
