--- a/docs/appendices/release-notes/2.1.1.rst
+++ b/docs/appendices/release-notes/2.1.1.rst
@@ -90,7 +90,7 @@ Fixes
 
  - Fixed an issue which caused an exception if ``EXPLAIN`` is used on a
    statement that uses the ``ANY (array_expression)`` :ref:`operators
-   <glossary-operator>`.
+   <gloss-operator>`.
 
  - Allow support of conditional expression with different return types that can
    be converted to a single return type.
