--- a/docs/appendices/release-notes/2.3.2.rst
+++ b/docs/appendices/release-notes/2.3.2.rst
@@ -35,7 +35,7 @@ Changes
 -------
 
 - Implemented a performance optimization when ``IN()`` or ``= ANY()``
-  :ref:`operators <glossary-operator>` are used with a subquery. For further
+  :ref:`operators <gloss-operator>` are used with a subquery. For further
   details see: https://github.com/crate/crate/issues/6755
 
 Fixes
