--- a/docs/appendices/release-notes/3.2.4.rst
+++ b/docs/appendices/release-notes/3.2.4.rst
@@ -63,13 +63,13 @@ Fixes
 
 - Fixed an issue that caused ``INSERT INTO`` with a subquery to not insert into
   partitioned tables where the :ref:`partition columns
-  <glossary-partition-column>` had a ``NOT NULL`` constraint.
+  <gloss-partition-column>` had a ``NOT NULL`` constraint.
 
 - Fixed a regression that caused inserts which create new dynamic columns to
   fail if the table was created in an earlier version of CrateDB.
 
 - Fixed an issue that caused inserts into partitioned tables where the
-  :ref:`partition column <glossary-partitioned-column>` is generated and
-  based on the child of an object to fail.
+  :ref:`partition column <gloss-partitioned-column>` is generated and based on
+  the child of an object to fail.
 
 - Fixed an issue that caused the Basic Authentication prompt to fail in Safari.
