--- a/docs/appendices/release-notes/4.0.11.rst
+++ b/docs/appendices/release-notes/4.0.11.rst
@@ -84,5 +84,5 @@ Fixes
 
 - Fixed an issue that caused a ``INSERT INTO ... (SELECT ... FROM ..)``
   statement to fail if not all :ref:`partition columns
-  <glossary-partition-column>` appeared in the target list of the ``INSERT
-  INTO`` statement.
+  <gloss-partition-column>` appeared in the target list of the ``INSERT INTO``
+  statement.
