--- a/docs/appendices/release-notes/4.0.12.rst
+++ b/docs/appendices/release-notes/4.0.12.rst
@@ -63,7 +63,7 @@ Fixes
 - Fixed the following issues in the Admin UI:
 
   - Fixed an issue that prevents the value for nested :ref:`partition columns
-    <glossary-partition-column>` showing up in the table partitions overview.
+    <gloss-partition-column>` showing up in the table partitions overview.
 
   - Fixed capitalization of ``Shards`` tab label
 
@@ -74,7 +74,7 @@ Fixes
   exceeded memory usage.
 
 - Fixed an issue that resulted in the values for nested :ref:`partitioned
-  columns <glossary-partitioned-column>` to be missing from the result.
+  columns <gloss-partitioned-column>` to be missing from the result.
 
 - Fixed an issue that caused ``SELECT *`` to include nested columns of type
   ``geo_shape`` instead of only selecting top-level columns.
