--- a/docs/appendices/release-notes/4.1.1.rst
+++ b/docs/appendices/release-notes/4.1.1.rst
@@ -40,7 +40,7 @@ Fixes
 - Fixed the following issues in the Admin UI:
 
   - Fixed an issue that prevents the value for nested :ref:`partition columns
-    <glossary-partition-column>` showing up in the table partitions overview.
+    <gloss-partition-column>` showing up in the table partitions overview.
 
   - Fixed capitalization of ``Shards`` tab label.
 
@@ -51,7 +51,7 @@ Fixes
   exceeded memory usage.
 
 - Fixed an issue that resulted in the values for nested :ref:`partition columns
-  <glossary-partition-column>` to be missing from the result.
+  <gloss-partition-column>` to be missing from the result.
 
 - Fixed an issue that caused ``SELECT *`` to include nested columns of type
   ``geo_shape`` instead of only selecting top-level columns.
