--- a/docs/appendices/release-notes/4.3.2.rst
+++ b/docs/appendices/release-notes/4.3.2.rst
@@ -35,9 +35,9 @@ Fixes
   if ``SSL`` is enabled on the server side, even if no cert authentication
   method is configured.
 
-- Fixed a regression introduced in CrateDB ``4.1`` resulting in duplicated recovery
-  file chunk responses sent.
-  This causes log entries of ``Transport handler not found ...``.
+- Fixed a regression introduced in CrateDB ``4.1`` resulting in duplicated
+  recovery file chunk responses sent. This causes log entries of ``Transport
+  handler not found ...``.
 
 - Fixed an issue that resulted in records in ``pg_catalog.pg_proc`` which
   wouldn't be joined with ``pg_catalog.pg_type``. Clients like ``npgsql`` use
@@ -57,7 +57,7 @@ Fixes
   an user friendly validation exception.
 
 - Fixed an issue that caused ``IS NULL`` and ``IS NOT NULL`` :ref:`operators
-  <glossary-operator>` on columns of type ``OBJECT`` with the column policy
+  <gloss-operator>` on columns of type ``OBJECT`` with the column policy
   ``IGNORED`` to match incorrect records.
 
 - Fixed an issue that led to an error like ``UnsupportedOperationException:
